parser/sample_tests/ours/inheritance.txt

*** Error line 5.
    height = h;
           ^
*** syntax error

